[FIX] sign: fix multiline textarea wrapping
Issue

	- Install Sign
	- In a template, add a multiline textarea
	- Set it for the employee
	- Sign directly
	- Write a very long line
	- Send and view

	The text is going out of the document

Cause

	There is a white-space: pre which force the
	textarea to not break the line.

Solution

	A similar issue has been fixed with
	04051774739416 which causes this one
	because there was a difference of
	wrapping between the edit view
	and the rendered view.

	The solution would be to compute the
	textarea new lines depending on the
	difference between scrollWidth and
	width. We also need to remove a css
	rule which breaks the computation.

OPW-2254750

closes odoo/enterprise#10912

X-original-commit: f92b3ed9c76158b75ea5c1ce37ba28aec3ce1624

--- a/sign/static/src/css/iframe.css
+++ b/sign/static/src/css/iframe.css
@@ -48,7 +48,6 @@
 }
 
 textarea.o_sign_sign_item {
-    white-space: pre;
     font-size: 12pt !important;
 }
 
@@ -258,7 +257,7 @@ textarea.o_sign_sign_item {
     background: transparent;
     color: black;
     cursor: auto;
-    white-space: pre;
+    white-space: pre-wrap;
     text-align: left;
 }
 
